--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* Hide number input arrows for all browsers */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
